chore: Refactored list a bit